syntax = "proto3";
package sequencer.sequencer;

import "sequencer/sequencer/arweave_transaction.proto";

option go_package = "github.com/warp-contracts/sequencer/x/sequencer/types";

// L1 interaction with a sort key value from the previous interaction with the contract
message ArweaveTransactionWithInfo {
  ArweaveTransaction transaction = 1;
  string prev_sort_key = 2;
  bytes random = 3;
}
