syntax = "proto3";
package sequencer.sequencer;

option go_package = "github.com/warp-contracts/sequencer/x/sequencer/types";

message PrevSortKey {
  string contract = 1; 
  string sortKey = 2; 
}

