syntax = "proto3";

package sequencer.sequencer;

import "gogoproto/gogo.proto";
import "cosmos_proto/cosmos.proto";
import "sequencer/sequencer/last_arweave_block.proto";

option go_package = "github.com/warp-contracts/sequencer/x/sequencer/types";

// Msg defines the Msg service.
service Msg {
  rpc DataItem               (MsgDataItem              ) returns (MsgDataItemResponse              );
  rpc LastArweaveBlock (MsgLastArweaveBlock) returns (MsgLastArweaveBlockResponse);
}
message MsgDataItem {
  bytes data_item = 1 [(gogoproto.customtype) = "github.com/warp-contracts/syncer/src/utils/bundlr.BundleItem", (gogoproto.nullable) = false];
}

message MsgDataItemResponse {}

message MsgLastArweaveBlock {
  string creator = 1;
}

message MsgLastArweaveBlockResponse {}
